--- a/css/main.css
+++ b/css/main.css
@@ -2,10 +2,18 @@ body {
   background: url("../img/bg.png") repeat;
 }
 #header {
+  color: #FFF;
   text-align: right;
+  background-color: #BF3E2A;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+#header a {
+  color: #FFF;
 }
 #header ul{
   display: flex;
+  margin: 0;
 }
 #header ul li {
   margin: 0 3%;
@@ -32,6 +40,18 @@ body {
   width: 100%;
 }
 
+.box1{
+  padding: 8px 19px;
+  color: #2c2c2f;
+  border-top: solid 5px #BF3E2A;
+  border-bottom: solid 5px #BF3E2A;
+  width: 80%;
+  margin: auto;
+}
+.box1 p {
+  margin: 0; 
+  padding: 0;
+}
 .box4{
   padding: 8px 19px;
   color: #2c2c2f;
@@ -39,7 +59,7 @@ body {
   border-top: solid 5px #BF3E2A;
   border-bottom: solid 5px #BF3E2A;
   width: 80%;
-  margin: auto;
+  margin: 10px auto;
 }
 .box4 p {
   margin: 0; 
