--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 body {
   background: url("../img/bg.png") repeat;
+  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Yu Gothic", YuGothic, "ヒラギノ角ゴ ProN W3", Hiragino Kaku Gothic ProN, Arial, "メイリオ", Meiryo, sans-serif;
 }
 
 #menu {
