--- a/css/main.css
+++ b/css/main.css
@@ -72,12 +72,15 @@ body {
 #kentou ul {
   width: 90%;
   list-style: none;
-  margin: auto;
+  margin: 5px auto;
   border-bottom: solid 1px #bf3e2a;
   box-sizing: border-box;
 }
-#kentou ul li {
-  padding: 15px 5px;
+#kentou ul li.detail {
+  padding: 5px 5px;
+}
+#kentou ul li.jacket {
+  text-align: center;
 }
 #kentou ul li p {
   font-size: 1em;
